--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
   --alternate-color: #D4EDFC;
   --white-color: #fff;
   --black-color: #000;
+  --btn-shadow: 0 2px 15px 3px #D4EDFC;
+  --social-shadow: 0 0 10px 2px #D4EDFC;
 }
 
 body {
@@ -29,10 +31,11 @@ body {
 /* container */
 .container {
   background-color: var(--white-color);
-  box-shadow: 0 0 15rem 1rem var(--tertiary-color);
+  box-shadow: 0 0 10rem 0.5rem var(--tertiary-color);
   padding: 5rem 4rem;
   width: 38rem;
   text-align: center;
+  border-bottom: 3px solid var(--secondary-color);
 }
 
 .container__logo {
@@ -42,48 +45,116 @@ body {
 
 /* main content */
 .container__main {
-  margin: 2rem 0;
+  margin: 3rem 0;
 }
 
 h1 {
   font-size: 2rem;
   color: var(--primary-color);
-  margin-bottom: -0.2rem;
-  
 }
 
 h2 {
   font-weight: 600;
-  font-size: 1.5rem;
   color: var(--secondary-color);
 }
 
 p {
-  margin-top: 1.2rem;
+  margin-top: 1.3rem;
   font-weight: 300;
+  line-height: 1.6;
 }
 
 /* buttons */
+.container__btn {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+  margin-bottom: 3rem;
+}
 
+.container__btn a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 9.5rem;
+  height: 3.5rem;
+  font-weight: 600;
+  font-size: 1rem;
+  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+}
 
+.container__btn--contact {
+  background-color: var(--secondary-color);
+  color: var(--white-color);
+  border: none;
+}
 
+.container__btn--cv {
+  background-color: var(--white-color);
+  border: 2px solid var(--secondary-color);
+  color: var(--primary-color);
+}
 
-
-
-/* socials */
-
-
-
-
+/* hover effect for btn */
+.container__btn--contact:hover,
+.container__btn--cv:hover {
+  box-shadow: var(--btn-shadow);
+  transition: 700ms;
+}
 
 /* Wave emoji */
 .container__btn--wave {
   display: inline-block;
+  margin-left: 0.3rem;
   animation-name: wave-animation;
   animation-duration: 2.5s;
   animation-iteration-count: infinite;
   transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
 }
+
+/* socials */
+.container__social ul {
+  display: inline-flex;
+  gap: 1.5rem;
+  list-style: none;
+
+}
+.container__social a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  border: 2px solid var(--tertiary-color);
+  background-color: var(--white-color);
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.container__social a:hover {
+  border: 2px solid var(--secondary-color);
+  box-shadow: var(--social-shadow);
+  transition: 700ms;
+}
+
+.social_logo {
+  color: var(--tertiary-color);
+  font-size: 25px;
+}
+
+.social_logo:hover {
+  color: var(--primary-color);
+  transition: 700ms;
+}
+
+
+
+
+
+
 /* keyframes */
 @keyframes wave-animation {
   0% { transform: rotate( 0.0deg) }
